src/z80asm/preproc_re.c
/* Generated by re2c 1.0.3 */
/*
Z88DK Z80 Macro Assembler

Assembly preprocessor

Copyright (C) Paulo Custodio, 2011-2018
License: The Artistic License 2.0, http://www.perlfoundation.org/artistic_license_2_0
Repository: https://github.com/z88dk/z88dk
*/

#define YYMAXFILL 8



#include "errors.h"
#include "parse.h"
#include "preproc.h"

#include <stdbool.h>
#include <ctype.h>



static bool check_eol(preproc_t* pp)
{
	while (isspace(*pp->p)) 		// eat spaces and newlines
		pp->p++;

	switch (*pp->p) {
		case '\0':
		case ';':
			pp->p += strlen(pp->p);
			return true;

		default:
			err_eol_expected(pp);
			pp->p += strlen(pp->p);
			return false;
	}
}

static str_t* get_filename(char *fs, char *fe)
{
	if (fs && fe) {
		while (isspace(*fs))
			fs++;

		if (*fs == '<' || *fs == '\'' || *fs == '"') {
			fs++;
			fe--;
		}

		if (fs != fe) {
			str_t *filename = str_new();
			str_set_n(filename, fs, fe - fs);
			return filename;
		}
	}

	return NULL;
}

static void do_include(preproc_t* pp, char *fs, char *fe)
{
	if (!check_eol(pp))
		return;

	str_t* filename = get_filename(fs, fe);
	if (filename) {
		str_set(pp->include_pending, str_data(filename));
		str_free(filename);
	}
	else {
		err_file_expected(pp);
	}
}

// split labels from following opcode to allow column-1 undecorated labels, e.g. "lbl nop"
static void split_label(preproc_t* pp, char* ls, char* le, char *ks, char* ke)
{
	str_t* label = str_new();
	str_set_n(label, ls, le - ls);

	str_t* keyword = str_new();
	str_set_n(keyword, ks, ke - ks);

	keyword_e id = keyword_id(str_data(keyword));
	if (id) {
		str_append(label, ":\n");
		preproc_push_line(pp, str_data(label));
		pp->p = ks;		// continue at keyword
	}
	else {
		pp->p = ls;		// restart scanning at start of line
	}

	str_free(label);
	str_free(keyword);
}

static void preproc_scan_label(preproc_t* pp)
{
	char *YYMARKER=NULL, *p1=NULL, *p2=NULL, *p3=NULL, *p4=NULL, *yyt1=NULL, *yyt2=NULL, *yyt3=NULL;

	char* p0 = pp->p;


{
	char yych;
	yych = *pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy4;
	case '.':	goto yy5;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = yyt3 = pp->p;
		goto yy6;
	default:	goto yy2;
	}
yy2:
	++pp->p;
yy3:
	{
		pp->p = p0;
		return;
	}
yy4:
	yych = *(YYMARKER = ++pp->p);
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy7;
	case '.':	goto yy10;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt3 = pp->p;
		goto yy11;
	default:	goto yy3;
	}
yy5:
	yych = *(YYMARKER = ++pp->p);
	switch (yych) {
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = pp->p;
		goto yy13;
	default:	goto yy3;
	}
yy6:
	yych = *(YYMARKER = ++pp->p);
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy18;
	default:	goto yy3;
	}
yy7:
	yych = *++pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy7;
	case '.':	goto yy10;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt3 = pp->p;
		goto yy11;
	default:	goto yy9;
	}
yy9:
	pp->p = YYMARKER;
	goto yy3;
yy10:
	yych = *++pp->p;
	switch (yych) {
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = pp->p;
		goto yy13;
	default:	goto yy9;
	}
yy11:
	yych = *++pp->p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy11;
	case ':':
		yyt1 = pp->p;
		goto yy19;
	default:	goto yy9;
	}
yy13:
	yych = *++pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':
		yyt2 = pp->p;
		goto yy21;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy13;
	default:	goto yy9;
	}
yy15:
	yych = *++pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy15;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt3 = pp->p;
		goto yy23;
	default:	goto yy9;
	}
yy17:
	yych = *++pp->p;
yy18:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':
		yyt2 = pp->p;
		goto yy15;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy17;
	case ':':
		yyt1 = pp->p;
		goto yy19;
	default:	goto yy9;
	}
yy19:
	yych = *++pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy19;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt2 = pp->p;
		goto yy26;
	default:	goto yy9;
	}
yy21:
	yych = *++pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy21;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt3 = pp->p;
		goto yy29;
	default:	goto yy9;
	}
yy23:
	yych = *++pp->p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy23;
	default:	goto yy25;
	}
yy25:
	p1 = yyt1;
	p2 = yyt2;
	p3 = yyt3;
	p4 = pp->p;
	{
		split_label(pp, p1, p2, p3, p4);
		return;
	}
yy26:
	yych = *++pp->p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy26;
	default:	goto yy28;
	}
yy28:
	p1 = yyt3;
	p2 = yyt1;
	p3 = yyt2;
	p4 = pp->p;
	{
		split_label(pp, p1, p2, p3, p4);
		return;
	}
yy29:
	yych = *++pp->p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy29;
	default:	goto yy31;
	}
yy31:
	p1 = yyt1;
	p2 = yyt2;
	p3 = yyt3;
	p4 = pp->p;
	{
		split_label(pp, p1, p2, p3, p4);
		return;
	}
}

}

void preproc_scan_line(preproc_t* pp)
{
	char *YYMARKER=NULL, *p1=NULL, *p2=NULL, *yyt1=NULL;

	// reserve buffer needed by re2c and init scan pointer
	str_reserve(pp->text, YYMAXFILL);
	pp->p = str_data(pp->text);

	// process any label, if present
	preproc_scan_label(pp);

	char* p0 = pp->p;


{
	char yych;
	unsigned int yyaccept = 0;
	yych = *pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':
	case '#':
	case '%':
	case '*':	goto yy36;
	case 'I':
	case 'i':	goto yy37;
	default:	goto yy34;
	}
yy34:
	++pp->p;
yy35:
	{
		preproc_push_line(pp, p0);
		return;
	}
yy36:
	yyaccept = 0;
	yych = *(YYMARKER = ++pp->p);
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy38;
	case 'I':
	case 'i':	goto yy41;
	default:	goto yy35;
	}
yy37:
	yyaccept = 0;
	yych = *(YYMARKER = ++pp->p);
	switch (yych) {
	case 'N':
	case 'n':	goto yy42;
	default:	goto yy35;
	}
yy38:
	yych = *++pp->p;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy38;
	case 'I':
	case 'i':	goto yy41;
	default:	goto yy40;
	}
yy40:
	pp->p = YYMARKER;
	if (yyaccept == 0) {
		goto yy35;
	} else {
		goto yy49;
	}
yy41:
	yych = *++pp->p;
	switch (yych) {
	case 'N':
	case 'n':	goto yy42;
	default:	goto yy40;
	}
yy42:
	yych = *++pp->p;
	switch (yych) {
	case 'C':
	case 'c':	goto yy43;
	default:	goto yy40;
	}
yy43:
	yych = *++pp->p;
	switch (yych) {
	case 'L':
	case 'l':	goto yy44;
	default:	goto yy40;
	}
yy44:
	yych = *++pp->p;
	switch (yych) {
	case 'U':
	case 'u':	goto yy45;
	default:	goto yy40;
	}
yy45:
	yych = *++pp->p;
	switch (yych) {
	case 'D':
	case 'd':	goto yy46;
	default:	goto yy40;
	}
yy46:
	yych = *++pp->p;
	switch (yych) {
	case 'E':
	case 'e':	goto yy47;
	default:	goto yy40;
	}
yy47:
	yyaccept = 1;
	yych = *(YYMARKER = ++pp->p);
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':
	case ';':
	case '>':	goto yy49;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy47;
	case '"':
		yyt1 = pp->p;
		goto yy53;
	case '\'':
		yyt1 = pp->p;
		goto yy55;
	case '<':
		yyt1 = pp->p;
		goto yy57;
	default:
		yyt1 = pp->p;
		goto yy50;
	}
yy49:
	{
		do_include(pp, NULL, NULL);
		return;
	}
yy50:
	yych = *++pp->p;
	switch (yych) {
	case 0x00:
	case '\t':
	case '\n':
	case '\v':
	case '\f':
	case '\r':
	case ' ':
	case '"':
	case '\'':
	case ';':
	case '<':
	case '>':	goto yy52;
	default:	goto yy50;
	}
yy52:
	p1 = yyt1;
	p2 = pp->p;
	{
		do_include(pp, p1, p2);
		return;
	}
yy53:
	yych = *++pp->p;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':
	case ';':	goto yy40;
	case '"':	goto yy59;
	default:	goto yy53;
	}
yy55:
	yych = *++pp->p;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':
	case ';':	goto yy40;
	case '\'':	goto yy59;
	default:	goto yy55;
	}
yy57:
	yych = *++pp->p;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':
	case ';':	goto yy40;
	case '>':	goto yy59;
	default:	goto yy57;
	}
yy59:
	++pp->p;
	goto yy52;
}

}
